--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,15 @@
         }
     },
     "require": {
-        "php": "^8",
+        "php": "^8.2",
         "textalk/websocket": "^1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "codedungeon/phpunit-result-printer": "^0.32.0",
-        "openswoole/ide-helper": "^4.11",
-        "kanata-php/socket-conveyor": "^1.1"
+        "openswoole/ide-helper": "^22.0",
+        "kanata-php/socket-conveyor": "^1.1",
+        "openswoole/core": "^22.1"
     },
     "scripts": {
         "test": [
